--- a/Minesweeper/Base.lproj/Main.storyboard
+++ b/Minesweeper/Base.lproj/Main.storyboard
@@ -43,6 +43,7 @@
                                         </constraints>
                                         <state key="normal" image="icon-happy-48"/>
                                         <connections>
+                                            <action selector="ResetButtonPressed:" destination="p8l-wO-SZg" eventType="touchUpInside" id="R42-C8-JpR"/>
                                             <action selector="resetButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="iDT-U4-Gv6"/>
                                         </connections>
                                     </button>
@@ -86,6 +87,9 @@
                                             <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="JdE-5M-QlQ">
+                                                    <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                                </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GXg-KX-lmK" userLabel="Number Of Mines Label">
                                                     <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
@@ -96,12 +100,17 @@
                                         </view>
                                         <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
+                                            <constraint firstItem="JdE-5M-QlQ" firstAttribute="height" secondItem="6cV-n3-F7T" secondAttribute="height" id="4lm-PS-MNy"/>
                                             <constraint firstItem="GXg-KX-lmK" firstAttribute="top" secondItem="6cV-n3-F7T" secondAttribute="top" id="BJu-ty-Fvo"/>
+                                            <constraint firstItem="JdE-5M-QlQ" firstAttribute="width" secondItem="6cV-n3-F7T" secondAttribute="width" id="BNw-pg-c3G"/>
+                                            <constraint firstItem="JdE-5M-QlQ" firstAttribute="centerY" secondItem="6cV-n3-F7T" secondAttribute="centerY" id="Hes-KK-0KF"/>
                                             <constraint firstAttribute="trailing" secondItem="GXg-KX-lmK" secondAttribute="trailing" id="K2l-NS-m2n"/>
+                                            <constraint firstItem="JdE-5M-QlQ" firstAttribute="centerX" secondItem="6cV-n3-F7T" secondAttribute="centerX" id="MmX-1E-M7u"/>
                                             <constraint firstItem="GXg-KX-lmK" firstAttribute="leading" secondItem="6cV-n3-F7T" secondAttribute="leading" id="bdy-hi-HAK"/>
                                             <constraint firstAttribute="bottom" secondItem="GXg-KX-lmK" secondAttribute="bottom" id="ofQ-Xl-Xhh"/>
                                         </constraints>
                                         <connections>
+                                            <outlet property="mineImageView" destination="JdE-5M-QlQ" id="EvP-fL-Nhc"/>
                                             <outlet property="numberOfMinesLabel" destination="GXg-KX-lmK" id="Ap5-rN-ccZ"/>
                                         </connections>
                                     </collectionViewCell>
@@ -131,6 +140,7 @@
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <exit id="p8l-wO-SZg" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="133.59999999999999" y="133.5832083958021"/>
         </scene>
