--- a/Minesweeper/Base.lproj/Main.storyboard
+++ b/Minesweeper/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="u3e-n8-ewN">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -10,6 +10,94 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
+        <!--Welcome Page View Controller-->
+        <scene sceneID="SM2-Dy-7cb">
+            <objects>
+                <viewController id="u3e-n8-ewN" customClass="WelcomePageViewController" customModule="Minesweeper" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="ddJ-fZ-LpM">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3EP-2G-fIO">
+                                <rect key="frame" x="70.5" y="108" width="234" height="58"/>
+                                <color key="backgroundColor" red="0.86274509799999999" green="0.86274509799999999" blue="0.86274509799999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="234" id="MtL-ud-Xxy"/>
+                                    <constraint firstAttribute="height" constant="58" id="O42-mn-UPz"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                                <state key="normal" title="Beginner"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                        <integer key="value" value="5"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                                <connections>
+                                    <action selector="gameDifficultyChosen:" destination="u3e-n8-ewN" eventType="touchUpInside" id="nRE-74-EUX"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HtK-OO-ucH">
+                                <rect key="frame" x="70.5" y="193" width="234" height="58"/>
+                                <color key="backgroundColor" red="0.86274509799999999" green="0.86274509799999999" blue="0.86274509799999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="58" id="UtH-qS-EqK"/>
+                                    <constraint firstAttribute="width" constant="234" id="gAe-Q0-jaZ"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                                <state key="normal" title="Intermediate"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                        <integer key="value" value="5"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                                <connections>
+                                    <action selector="gameDifficultyChosen:" destination="u3e-n8-ewN" eventType="touchUpInside" id="eWN-Ji-bhb"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" tag="3" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mgT-bQ-tgo">
+                                <rect key="frame" x="70.5" y="278" width="234" height="58"/>
+                                <color key="backgroundColor" red="0.86274509799999999" green="0.86274509799999999" blue="0.86274509799999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="234" id="fju-PZ-wd4"/>
+                                    <constraint firstAttribute="height" constant="58" id="tCY-yz-La4"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                                <state key="normal" title="Advanced"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                        <integer key="value" value="5"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                                <connections>
+                                    <action selector="gameDifficultyChosen:" destination="u3e-n8-ewN" eventType="touchUpInside" id="oeL-t7-8dr"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="mgT-bQ-tgo" firstAttribute="top" secondItem="HtK-OO-ucH" secondAttribute="bottom" constant="27" id="M0t-Y9-847"/>
+                            <constraint firstItem="3EP-2G-fIO" firstAttribute="top" secondItem="5pg-dB-oM5" secondAttribute="top" constant="88" id="Nqc-2p-NpZ"/>
+                            <constraint firstItem="mgT-bQ-tgo" firstAttribute="centerX" secondItem="5pg-dB-oM5" secondAttribute="centerX" id="OV2-CI-5id"/>
+                            <constraint firstItem="HtK-OO-ucH" firstAttribute="top" secondItem="3EP-2G-fIO" secondAttribute="bottom" constant="27" id="Wth-P5-G1q"/>
+                            <constraint firstItem="HtK-OO-ucH" firstAttribute="top" secondItem="3EP-2G-fIO" secondAttribute="bottom" constant="27" id="YRZ-IB-eyp"/>
+                            <constraint firstItem="3EP-2G-fIO" firstAttribute="centerX" secondItem="5pg-dB-oM5" secondAttribute="centerX" id="akk-ai-ivW"/>
+                            <constraint firstItem="HtK-OO-ucH" firstAttribute="centerX" secondItem="5pg-dB-oM5" secondAttribute="centerX" id="fAa-Qi-gcc"/>
+                            <constraint firstItem="3EP-2G-fIO" firstAttribute="top" secondItem="5pg-dB-oM5" secondAttribute="top" constant="88" id="oiP-K5-5cj"/>
+                            <constraint firstItem="HtK-OO-ucH" firstAttribute="top" secondItem="3EP-2G-fIO" secondAttribute="bottom" constant="27" id="vyG-9Z-QCk"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="5pg-dB-oM5"/>
+                    </view>
+                    <connections>
+                        <outlet property="advancedButton" destination="mgT-bQ-tgo" id="UIf-Ro-HPS"/>
+                        <outlet property="beginnerButton" destination="3EP-2G-fIO" id="7b6-mb-SRG"/>
+                        <outlet property="intermediateButton" destination="HtK-OO-ucH" id="RuB-kS-6ND"/>
+                        <segue destination="BYZ-38-t0r" kind="presentation" identifier="mySegue" id="pmC-CK-gaq"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="3IX-8r-PbN" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-818.39999999999998" y="135.38230884557723"/>
+        </scene>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
